--- a/.gitignore
+++ b/.gitignore
@@ -482,3 +482,6 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+viptela.egg-info/
+venv_python_viptela/
