--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
-library = ansible/modules/viptela
-module_utils = ansible/module_utils/viptela
+library = ansible/modules
+module_utils = ansible/module_utils
