--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Click
 dictdiffer
 PyYAML
 requests
+sphinx>=2.1.2,<3.0
+sphinx-markdown==1.0.2
+sphinx-markdown-builder==0.5.4
+sphinx_rtd_theme==0.4.3
+m2r==0.2.1
