Updated to work with HQ2

--- a/tests/vmanage-attachments.yml
+++ b/tests/vmanage-attachments.yml
@@ -1,13 +1,14 @@
 vmanage_attachments:
 -   host_name: vsmart1
     device_type: vsmart
-    uuid: caecb73b-d163-402f-8aef-b3398394bcac
+    uuid: b6e83221-ccfa-494b-a038-8d0e334179ac
     system_ip: 1.1.1.3
     site_id: '1'
     template: vsmart
     variables:
         vpn0_default_gateway: 192.133.184.1
         vpn0_internet_ipv4_address: 192.133.184.52/22
+        null: '1'
 -   host_name: hq-cedge1
     device_type: vedge
     uuid: CSR-82DEC3C6-3A28-B866-6F4A-40BEA274CA00
@@ -15,17 +16,17 @@ vmanage_attachments:
     site_id: '1'
     template: hq-csr1000v
     variables:
-        banner_login: This system is for the use of authorized clients only.
+        banner_login: Hello!
         banner_motd: Welcome to hq-cedge1!
         vpn1_interface: GigabitEthernet3
-        vpn1_ipv4_address: 10.0.255.6/30
+        vpn1_ipv4_address: 10.0.1.1/24
         vpn1_ospf_interface: GigabitEthernet3
         vpn512_interface: GigabitEthernet1
         vpn0_interface: GigabitEthernet2
         system_host_name: hq-cedge1
         system_latitude: '37.411343'
         system_longitude: '-121.938803'
-        system_system_ip: 192.168.255.13
+        system_system_ip: 1.1.1.4
         system_site_id: '1'
 -   host_name: site1-cedge1
     device_type: vedge
@@ -34,7 +35,7 @@ vmanage_attachments:
     site_id: '2'
     template: branch-csr1000v
     variables:
-        banner_login: This system is for the use of authorized clients only.
+        banner_login: Hello!
         banner_motd: Welcome to site1-cedge1!
         vpn1_interface: GigabitEthernet3
         vpn1_ipv4_address: 192.168.1.1/24
@@ -43,7 +44,7 @@ vmanage_attachments:
         system_host_name: site1-cedge1
         system_latitude: '35.85636'
         system_longitude: '-78.879725'
-        system_system_ip: 192.168.255.14
+        system_system_ip: 1.1.2.1
         system_site_id: '2'
 -   host_name: site2-vedge1
     device_type: vedge
@@ -52,7 +53,7 @@ vmanage_attachments:
     site_id: '3'
     template: branch-vedge-cloud
     variables:
-        banner_login: This system is for the use of authorized clients only.
+        banner_login: Hello!
         banner_motd: Welcome to site2-vedge1!
         vpn1_interface: ge0/1
         vpn1_ipv4_address: 192.168.2.1/24
@@ -61,5 +62,5 @@ vmanage_attachments:
         system_host_name: site2-vedge1
         system_latitude: '32.999892'
         system_longitude: '-96.678886'
-        system_system_ip: 192.168.255.15
+        system_system_ip: 1.1.3.1
         system_site_id: '3'
