--- a/examples/get_device_list.yml
+++ b/examples/get_device_list.yml
@@ -1,8 +1,11 @@
 - hosts: localhost
   gather_facts: no
   tasks:
-    - name: Get device facts from vMamage
+    - name: Get device facts from vManage
       vmanage_device_facts:
+        device: 1.1.3.1
+        gather_subset:
+            - omp
       register: device_facts
 
     - debug:
