--- a/examples/get_device_list.yml
+++ b/examples/get_device_list.yml
@@ -3,9 +3,9 @@
   tasks:
     - name: Get device facts from vManage
       vmanage_device_facts:
-        device: 1.1.3.1
-        gather_subset:
-            - omp
+        # device: 1.1.3.1
+        # gather_subset:
+        #     - omp
       register: device_facts
 
     - debug:
