david initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -485,3 +485,8 @@ MigrationBackup/
 
 viptela.egg-info/
 venv_python_viptela/
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/python-viptela.iml
