--- a/.gitignore
+++ b/.gitignore
@@ -485,6 +485,7 @@ MigrationBackup/
 
 viptela.egg-info/
 venv_python_viptela/
+.idea/
 /.idea/misc.xml
 /.idea/modules.xml
 /.idea/inspectionProfiles/profiles_settings.xml
