--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ PyYAML
 requests
 sphinx>=2.1.2,<3.0
 sphinx-autoapi==1.3.0
+sphinx-click>=1.3.0
 sphinx-markdown==1.0.2
 sphinx-markdown-builder==0.5.4
 sphinx_rtd_theme==0.4.3
