--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -e ./
+  - pip install awscli
 script:
   - make check
 jobs:
