--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,14 +1,14 @@
-ansible==2.8.6
+ansible==2.10.7
 asn1crypto==0.24.0
 bcrypt==3.1.7
 certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
-cryptography==2.7
+cryptography>=3.2
 enum34==1.1.6
 idna==2.6
 ipaddress==1.0.17
-Jinja2==2.10.1
+jinja2==2.11.3
 keyring==10.6.0
 keyrings.alt==3.0
 lxml==4.6.3
@@ -22,8 +22,8 @@ PyNaCl==1.3.0
 pyOpenSSL==19.0.0
 pyxdg==0.26
 PyYAML==5.4.1
-requests==2.22.0
+requests==2.26.0
 SecretStorage==2.3.1
 selectors2==2.0.1
 six==1.11.0
-urllib3==1.25.3
+urllib3==1.26.5
