--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,9 +1,9 @@
 name: Publish to pypi
 
 on:
-  push:
-    # branches: [ master ]
-    tags: [ '*.*.*' ]
+  release:
+    types:
+      - created
 
 jobs:
   build-n-publish:
