--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,6 @@ jobs:
         with:
           python-version: "${{ matrix.python-version }}"
       - name: Install requirements
-        run: |
-          pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt      
+        run: pip install --upgrade pip setuptools wheel
       - name: Run tests
         run: "./test.bash"
